[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Weapons/gluedrop.png" type="Texture" id=1]
[ext_resource path="res://weapons/projectiles/GlueDrop.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.1899, 15.2662 )

[node name="GlueDrop" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="groundCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="ceilingCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -15 )
collision_mask = 2

[node name="rightCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="leftCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 2
[connection signal="body_entered" from="." to="." method="_on_GlueDrop_body_entered"]
